--- a/package.json
+++ b/package.json
@@ -11,29 +11,29 @@
     "install:legacy": "npm install --legacy-peer-deps"
   },
   "dependencies": {
+    "@radix-ui/react-switch": "^1.2.6",
+    "@vercel/analytics": "^1.3.0",
+    "clsx": "^2.1.0",
+    "date-fns": "^3.0.0",
+    "leaflet": "^1.9.4",
+    "lucide-react": "^0.468.0",
     "next": "^16.0.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "@vercel/analytics": "^1.3.0",
-    "leaflet": "^1.9.4",
-    "lucide-react": "^0.468.0",
+    "react-leaflet": "^4.2.1",
     "recharts": "^2.12.0",
-    "clsx": "^2.1.0",
-    "tailwind-merge": "^2.2.0",
-    "date-fns": "^3.0.0",
-    "react-leaflet": "^4.2.1"
+    "tailwind-merge": "^2.2.0"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.8",
     "@types/node": "^22.0.0",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
-    "@types/leaflet": "^1.9.8",
-    "typescript": "^5.6.0",
-    "tailwindcss": "^3.4.17",
-    "postcss": "^8.4.47",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.0.0",
-    "eslint-config-next": "^16.0.7"
+    "eslint-config-next": "^16.0.7",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5.6.0"
   }
 }
-
